force-app/main/default/objects/Health_Quiz_Session__c/Health_Quiz_Session__c.object-meta.xml
<CustomObject>
    <label>Health Quiz Session</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Health Quiz Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>