force-app/main/default/objects/Health_Quiz_Session__c/fields/Completed_Steps__c.field-meta.xml
<CustomField>
    <fullName>Completed_Steps__c</fullName>
    <label>Completed Steps</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>