force-app/main/default/objects/Health_Quiz_Session__c/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <label>Display Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>