force-app/main/default/objects/Health_Quiz_Session__c/fields/Latest_Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Latest_Bundle_Name__c</fullName>
    <label>Latest Bundle Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>