force-app/main/default/objects/Health_Quiz_Session__c/fields/Session_Key__c.field-meta.xml
<CustomField>
    <fullName>Session_Key__c</fullName>
    <externalId>true</externalId>
    <label>Session Key</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>